Change client to launcher

--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -21,7 +21,7 @@
 					mat-button
 					style="margin-right: 16px;"
 				>
-					<mat-icon>get_app</mat-icon> Download client
+					<mat-icon>get_app</mat-icon> Download launcher
 				</a>
 
 				<a *ngIf="!isAuth" mat-flat-button (click)="onSignIn()">
