--- a/frontend/src/app/home/home.component.scss
+++ b/frontend/src/app/home/home.component.scss
@@ -1,10 +1,18 @@
+$bgDim: 0.2;
+
 .header {
 	width: 100vw;
 	height: 250px;
 	padding: 50px 0;
 	text-align: center;
 
-	background-image: url(/assets/header-blur.jpg);
+	background-image: linear-gradient(
+			0deg,
+			rgba(#1d1f21, $bgDim),
+			rgba(#1d1f21, $bgDim)
+		),
+		url(/assets/header-blur.jpg);
+
 	background-size: cover;
 	background-position: center;
 	background-repeat: repeat;
