--- a/frontend/src/app/video-stream/video-stream.component.html
+++ b/frontend/src/app/video-stream/video-stream.component.html
@@ -1,2 +1,2 @@
 <iframe src="/assets/autoplay-hack.ogg" allow="autoplay" autoplay="1"></iframe>
-<video #video [srcObject]="stream" autoplay></video>
+<video #video [srcObject]="stream" autoplay controls></video>
