Incomplete domain changes

--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -63,8 +63,11 @@
 				</ng-container>
 
 				<mat-menu #appMenu="matMenu">
-					<button mat-menu-item routerLink="/user/settings">
-						<mat-icon>settings</mat-icon> Settings
+					<button mat-menu-item routerLink="user/domains">
+						<mat-icon>public</mat-icon> My domains
+					</button>
+					<button mat-menu-item routerLink="user/settings">
+						<mat-icon>settings</mat-icon> User settings
 					</button>
 					<button mat-menu-item (click)="onSignOut()">
 						<mat-icon>arrow_back</mat-icon> Sign out
