--- a/frontend/src/app/user/domains/domains.component.html
+++ b/frontend/src/app/user/domains/domains.component.html
@@ -1,28 +1,33 @@
 <div class="container">
-	<h1 style="padding: 16px 0;">My domains</h1>
+	<h1 style="padding-top: 16px">My domains</h1>
+	<button
+		mat-flat-button
+		color="primary"
+		style="margin-bottom: 32px;"
+		(click)="onCreateDomain()"
+	>
+		<mat-icon>add</mat-icon> Create new domain
+	</button>
+	<span style="padding: 0 4px;"></span>
+	<button
+		mat-flat-button
+		style="margin-bottom: 32px;"
+		(click)="refreshDomains(true)"
+	>
+		<mat-icon>refresh</mat-icon> Refresh
+	</button>
 	<div class="row">
-		<div class="col-md-4" *ngFor="let domain of domains">
-			<mat-card>
-				<h2>{{ domain.label }}</h2>
-				<p>{{ domain.description }}</p>
-				<p>
-					{{ domain.online_users + domain.online_anonymous_users }}
-					people online
-				</p>
-				<button mat-stroked-button>
-					<mat-icon>edit</mat-icon> Edit domain
-				</button>
-				<button
-					mat-flat-button
-					color="warn"
-					(click)="onGenerateToken(domain)"
-				>
-					<mat-icon>vpn_key</mat-icon> Generate new access token
-				</button>
-				<button mat-flat-button color="warn">
-					<mat-icon>delete</mat-icon> Delete domain
-				</button>
-			</mat-card>
+		<div
+			class="col-lg-4 col-md-6"
+			*ngFor="let domain of domains"
+			style="padding-bottom: 40px;"
+		>
+			<app-domain-card
+				[domain]="domain"
+				editMode="true"
+				(onEdit)="onEditDomain(domain)"
+			></app-domain-card>
 		</div>
 	</div>
 </div>
+<div style="padding: 0 8px;"></div>
