--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -10,6 +10,10 @@
 					/>
 				</a>
 
+				<button class="menu-item" mat-button routerLink="/explore">
+					<mat-icon>public</mat-icon> Explore
+				</button>
+
 				<button
 					class="menu-item"
 					href="https://tivolicloud.s3-us-west-2.amazonaws.com/tivoli-cloud-launcher.zip"
