--- a/frontend/src/app/user/domains/domains.component.html
+++ b/frontend/src/app/user/domains/domains.component.html
@@ -1,12 +1,12 @@
 <div class="container">
-	<h1 style="padding-top: 16px">My domains</h1>
+	<h1 style="padding-top: 16px">My worlds</h1>
 	<button
 		mat-flat-button
 		color="primary"
 		style="margin-bottom: 32px;"
 		(click)="onCreateDomain()"
 	>
-		<mat-icon>add</mat-icon> Create new domain
+		<mat-icon>add</mat-icon> Create new world
 	</button>
 	<span style="padding: 0 4px;"></span>
 	<button
