--- a/frontend/src/app/ui/edit-domain/edit-domain.component.html
+++ b/frontend/src/app/ui/edit-domain/edit-domain.component.html
@@ -1,4 +1,4 @@
-<h2 *ngIf="!editMode" style="margin-top: 0;">Creating a new domain</h2>
+<h2 *ngIf="!editMode" style="margin-top: 0;">Creating a new world</h2>
 <h2 *ngIf="editMode" style="margin-top: 0;">
 	Editing
 	<span style="font-weight: 500">{{ domain.label }}</span>
@@ -66,7 +66,7 @@ display: flex; vertical-align: middle;"
 		*ngIf="!editMode"
 		[disabled]="form.invalid || isLoading"
 	>
-		<mat-icon>add</mat-icon> Add domain
+		<mat-icon>add</mat-icon> Add world
 	</button>
 	<button
 		type="submit"
@@ -75,7 +75,7 @@ display: flex; vertical-align: middle;"
 		*ngIf="editMode"
 		[disabled]="form.invalid || isLoading"
 	>
-		<mat-icon>save</mat-icon> Save domain
+		<mat-icon>save</mat-icon> Save world
 	</button>
 
 	<button
