--- a/frontend/src/app/header/download/download.component.html
+++ b/frontend/src/app/header/download/download.component.html
@@ -13,7 +13,7 @@
 			<a
 				mat-flat-button
 				color="primary"
-				href="https://tivolicloud.s3-us-west-2.amazonaws.com/releases/tivoli-cloud-setup.exe"
+				href="https://cdn.tivolicloud.com/releases/tivoli-cloud-setup.exe"
 			>
 				Download<span>tivoli-cloud-setup.exe</span>
 			</a>
@@ -33,7 +33,7 @@
 			<a
 				mat-flat-button
 				color="primary"
-				href="https://tivolicloud.s3-us-west-2.amazonaws.com/releases/tivoli-cloud.dmg"
+				href="https://cdn.tivolicloud.com/releases/tivoli-cloud.dmg"
 			>
 				Download<span>tivoli-cloud.dmg</span>
 			</a>
