--- a/frontend/src/app/admin/admin.component.html
+++ b/frontend/src/app/admin/admin.component.html
@@ -86,6 +86,13 @@
 					</td>
 				</ng-container>
 
+				<ng-container matColumnDef="id">
+					<th mat-header-cell *matHeaderCellDef>Session ID</th>
+					<td mat-cell *matCellDef="let element">
+						{{ element.id }}
+					</td>
+				</ng-container>
+
 				<tr mat-header-row *matHeaderRowDef="onlineUsersCols"></tr>
 				<tr mat-row *matRowDef="let row; columns: onlineUsersCols"></tr>
 			</table>
