User generated to user created

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -17,7 +17,7 @@
 			</h2>
 			<h2>
 				<mat-icon>public</mat-icon>
-				<b> persistent user generated</b> virtual worlds owned by the
+				<b> persistent user created</b> virtual worlds owned by the
 				users
 			</h2>
 			<h2>
