Self hosting fonts

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -8,6 +8,7 @@ $theme: mat-light-theme($primary, $accent, $warn);
 @include angular-material-theme($theme);
 
 @import "../node_modules/bootstrap/dist/css/bootstrap-grid.css";
+@import "fonts";
 
 html,
 body {
