Added email verification

--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -37,16 +37,16 @@
 					<div
 						style="display: inline-block; text-align: right; margin-right: 8px;"
 					>
-						Signed in as <b>{{ user.username }}</b>
+						Signed in as <b>{{ user.profile.username }}</b>
 						<br />
 						<div style="opacity: 0.5; margin-top: -16px;">
-							{{ user.email }}
+							{{ user.profile.email }}
 						</div>
 					</div>
 					<img
 						class="user-image"
-						src="/api/user/{{ user.username }}/image"
-						[alt]="'User image of ' + user.username"
+						src="/api/user/{{ user.profile.username }}/image"
+						[alt]="'User image of ' + user.profile.username"
 					/>
 				</button>
 
