--- a/frontend/src/app/header/sign-in/sign-in.component.html
+++ b/frontend/src/app/header/sign-in/sign-in.component.html
@@ -97,7 +97,7 @@
 		>
 			<img
 				style="width: 24px; height: 24px; margin-right: 4px;"
-				[src]="'/assets/' + service.toLowerCase() + '-logo.svg'"
+				[src]="'/assets/icons/' + service.toLowerCase() + '-logo.svg'"
 			/>
 			{{ service }}
 		</button>
