--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="header">
-	<img src="/assets/logo-light-alpha.svg" alt="Tivoli Cloud VR logo" />
+	<img src="/assets/logo-light.svg" alt="Tivoli Cloud VR logo" />
 </div>
 <div class="container">
 	<div class="row">
