--- a/frontend/src/app/home/home.component.scss
+++ b/frontend/src/app/home/home.component.scss
@@ -6,12 +6,7 @@ $bgDim: 0.2;
 	padding: 50px 0;
 	text-align: center;
 
-	background-image: linear-gradient(
-			0deg,
-			rgba(#1d1f21, $bgDim),
-			rgba(#1d1f21, $bgDim)
-		),
-		url(/assets/header-blur.jpg);
+	background-image: url(/assets/header.jpg);
 
 	background-size: cover;
 	background-position: center;
