--- a/frontend/src/app/admin/admin.component.scss
+++ b/frontend/src/app/admin/admin.component.scss
@@ -1,5 +1,10 @@
-.user-image {
+.container-fluid {
+	margin-right: auto;
+	margin-left: auto;
+	max-width: 1600px; /* or 950px */
+}
+
+.avatar {
 	width: 32px;
 	height: 32px;
-	border-radius: 50%;
 }
