Updated docker file with puppeteer and fonts

--- a/server/assets/nametag.hbs
+++ b/server/assets/nametag.hbs
@@ -83,7 +83,7 @@
 				rgba(29, 31, 33, 0.3),
 				rgba(29, 31, 33, 0.3)
 			),
-			url({{avatarUrl}});
+			url("{{avatarUrl}}");
 		background-size: cover;
 		background-position: center;
 		filter: blur(5px);
