Updated download component

--- a/frontend/src/app/header/download/download.component.html
+++ b/frontend/src/app/header/download/download.component.html
@@ -1,6 +1,7 @@
 <h1 style="text-align: center; margin-top: 24px;">
 	Download
-	<b class="wiggle">
+	<b *ngIf="!found">Tivoli Cloud VR</b>
+	<b *ngIf="found" class="wiggle">
 		<span>T</span>
 		<span>i</span>
 		<span>v</span>
