Added extra buttons to header and changed icons naming

--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -20,11 +20,29 @@
 					target="_blank"
 					mat-button
 				>
-					<mat-icon>bookmarks</mat-icon> Blog
+					<mat-icon>create</mat-icon> Blog
+				</a>
+
+				<a
+					class="menu-item"
+					href="https://docs.tivolicloud.com"
+					target="_blank"
+					mat-button
+				>
+					<mat-icon>bookmarks</mat-icon> Docs
+				</a>
+
+				<a class="menu-item" href="/discord" target="_blank" mat-button>
+					<img
+						src="/assets/icons/discord-white.svg"
+						alt="Discord"
+						style="height: 24px; margin-right: 4px"
+					/>
+					Discord
 				</a>
 
 				<button class="menu-item" mat-button routerLink="/explore">
-					<mat-icon>public</mat-icon> Explore worlds
+					<mat-icon>public</mat-icon> Explore
 				</button>
 
 				<span style="flex: 1 1 auto"></span>
