--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
 	<mat-toolbar-row>
-		<div class="container">
+		<div class="container-fluid" style="max-width: 1400px">
 			<div class="row align-items-center">
 				<a mat-button routerLink="/">
 					<img
@@ -36,7 +36,7 @@
 					<img
 						src="/assets/icons/discord-white.svg"
 						alt="Discord"
-						style="height: 24px; margin-right: 4px"
+						style="height: 24px"
 					/>
 					Discord
 				</a>
